Create new endpoint + change paths to other ones